classDiagram
    class Users {
        <<Collection>>
        +String id
        +String name
        +String email
        +String role "admin, tourist, driver, partner"
        +String language
        +String country
        +String documentId
        +int points
        +DateTime createdAt
    }

    class Tours {
        <<Collection>>
        +String id
        +String title
        +String description
        +String category
        +double price
        +int durationMinutes
        +int maxCapacity
        +bool isActive
        +String imageUrl
        +int pointsToEarn
        +List~Map~ stops
        +DateTime createdAt
    }

    class ScheduledTours {
        <<Collection>>
        +String id
        +String tourId
        +String tourTitle
        +DateTime date
        +String startTime
        +String status "Pending, Active, Completed"
    }

    class Promotions {
        <<Collection>>
        +String id
        +String partnerId
        +String partnerName
        +String title
        +String description
        +String imageUrl
        +int pointsCost
        +bool isActive
        +bool isApproved
        +DateTime startDate
        +DateTime endDate
        +String status
        +String adminComments
        +DateTime createdAt
    }

    class Notifications {
        <<Collection>>
        +String id
        +String userId
        +String title
        +String message
        +bool isUnread
        +DateTime createdAt
    }

    Users "1" -- "*" ScheduledTours : Books >
    Users "1" -- "*" Promotions : Redeems >
    Users "1" -- "*" Notifications : Receives >
    Tours "1" -- "*" ScheduledTours : Has >

    class PointLogs {
        <<Collection>>
        +String id
        +String touristId
        +String touristName
        +int points
        +String type "earned_from_partner, earned_from_admin"
        +DateTime createdAt
    }

    Users "1" --> "0..*" PointLogs : "recibe puntos"
